--- a/styles/style.css
+++ b/styles/style.css
@@ -23,6 +23,8 @@ body {
 	/* startje */
 	--color-black:#111;
 	--color-white:#eee;
+	--color-text-gradient-yellow: linear-gradient(360deg,#ffc500 0%,#ff8100 100%);
+	--color-drop-shadow-h2: #2669a4;
 	--gradient-text: linear-gradient(0.25turn, #8235E9, #632FAC);
 	--gradient-orange-button: linear-gradient(360deg,#ff7c00 0%,#ffca00 100%);
 	--gradient-button-hover: linear-gradient(180deg,#8235e9 0%,#4b2b7f 100%);
@@ -243,7 +245,13 @@ h2 {
 
 /* werkt niet?*/
 
+/*************************/
+/* SECTION 1 CARROUSEL  */
+/***********************/
 
+main section:first-of-type ul {
+	margin: 0;
+}
 
 main section:first-of-type ul li {
 
@@ -259,10 +267,27 @@ main section:first-of-type ul li {
 	font-family: 'Montserrat';
 }
 
-main section:first-of-type ul li p {
-	color:var(--color-white)
-	filter: drop-shadow(5px 5px 19px rgba(0, 0, 0, 0.41));
-	/* credit: https://webcode.tools/generators/css/drop-shadow */
+main section:first-of-type h2 {
+	-webkit-text-stroke: 2px var(--color-white);
+	/* credit font border https://stackoverflow.com/questions/2570972/css-font-border */
+	font-size:50px;
+
+
+	background: var(--color-text-gradient-yellow);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	/* source: https://cssgradient.io/blog/css-gradient-text/ */
+	text-shadow: var(--color-drop-shadow-h2) 2px 2px;
+}
+
+main section:first-of-type p {
+	font-size: 18px;
+	line-height: 24px;
+	font-weight: 600;
+	color: var(--color-white);	
+	text-shadow: 2px 2px 10px, #0000007a;
+	margin-bottom: 1.25rem;
+	text-align: center;
 
 }
 
