--- a/styles/style.css
+++ b/styles/style.css
@@ -1,317 +1,350 @@
 /**************/
 /* CSS REMEDY */
 /**************/
-*, *::after, *::before {
-  box-sizing:border-box;  
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
 }
 
 body {
-	margin: 0px;
- }
+  margin: 0;
+}
 
- li {
-	list-style:none;
- }
+li {
+  list-style: none;
+}
 
+p {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+}
 
+/* source: https://developer.mozilla.org/en-US/docs/Web/CSS/gradient/linear-gradient */
+/* source: Neopets.com */
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459WRhyzbi.woff2)
+    format("woff2");
+  unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F,
+    U+FE2E-FE2F;
+}
+/* cyrillic */
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459W1hyzbi.woff2)
+    format("woff2");
+  unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+/* vietnamese */
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459WZhyzbi.woff2)
+    format("woff2");
+  unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1,
+    U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329,
+    U+1EA0-1EF9, U+20AB;
+}
+/* latin-ext */
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459Wdhyzbi.woff2)
+    format("woff2");
+  unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF,
+    U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459Wlhyw.woff2)
+    format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
+    U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+/* cyrillic-ext */
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459WRhyzbi.woff2)
+    format("woff2");
+  unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F,
+    U+FE2E-FE2F;
+}
+/* cyrillic */
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459W1hyzbi.woff2)
+    format("woff2");
+  unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+/* vietnamese */
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459WZhyzbi.woff2)
+    format("woff2");
+  unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1,
+    U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329,
+    U+1EA0-1EF9, U+20AB;
+}
+/* latin-ext */
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459Wdhyzbi.woff2)
+    format("woff2");
+  unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF,
+    U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459Wlhyw.woff2)
+    format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
+    U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+/* cyrillic-ext */
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459WRhyzbi.woff2)
+    format("woff2");
+  unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F,
+    U+FE2E-FE2F;
+}
+/* cyrillic */
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459W1hyzbi.woff2)
+    format("woff2");
+  unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+/* vietnamese */
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459WZhyzbi.woff2)
+    format("woff2");
+  unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1,
+    U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329,
+    U+1EA0-1EF9, U+20AB;
+}
+/* latin-ext */
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459Wdhyzbi.woff2)
+    format("woff2");
+  unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF,
+    U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459Wlhyw.woff2)
+    format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
+    U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
 
+@font-face {
+  font-family: "BurbankBig";
+  font-style: Bold;
+  font-weight: 700;
+  src: url(../fonts/Burbank-Big-Regular-Bold.ttf) format("truetype");
+}
 
 /*********************/
 /* CUSTOM PROPERTIES */
 /*********************/
 :root {
-	/* startje */
-	--color-black:#111;
-	--color-white:#eee;
-	--color-text-gradient-yellow: linear-gradient(360deg,#ffc500 0%,#ff8100 100%);
-	--color-drop-shadow-h2: #2669a4;
-	--gradient-text: linear-gradient(0.25turn, #8235E9, #632FAC);
-	--gradient-orange-button: linear-gradient(360deg,#ff7c00 0%,#ffca00 100%);
-	--gradient-button-hover: linear-gradient(180deg,#8235e9 0%,#4b2b7f 100%);
+  /* kleuren */
+  --color-black: #111;
+  --color-white: #eee;
+  --color-text-gradient-yellow: linear-gradient(
+    360deg,
+    #ffc500 0%,
+    #ff8100 100%
+  );
+  --color-drop-shadow-h2: #2669a4;
+  --gradient-text: linear-gradient(0.25turn, #8235e9, #632fac);
+  --gradient-orange-button: linear-gradient(360deg, #ff7c00 0%, #ffca00 100%);
+  --gradient-button-hover: linear-gradient(180deg, #8235e9 0%, #4b2b7f 100%);
+  --gradient-socials-navbuttons: linear-gradient(0.25turn, #414141, #060606);
+}
 
-
-	/* source: https://developer.mozilla.org/en-US/docs/Web/CSS/gradient/linear-gradient */
-
-	/* source: Neopets.com */
-	@font-face {
-		font-family: 'Montserrat';
-		font-style: normal;
-		font-weight: 400;
-		font-display: swap;
-		src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459WRhyzbi.woff2) format('woff2');
-		unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
-	  }
-	  /* cyrillic */
-	  @font-face {
-		font-family: 'Montserrat';
-		font-style: normal;
-		font-weight: 400;
-		font-display: swap;
-		src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459W1hyzbi.woff2) format('woff2');
-		unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
-	  }
-	  /* vietnamese */
-	  @font-face {
-		font-family: 'Montserrat';
-		font-style: normal;
-		font-weight: 400;
-		font-display: swap;
-		src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459WZhyzbi.woff2) format('woff2');
-		unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1EA0-1EF9, U+20AB;
-	  }
-	  /* latin-ext */
-	  @font-face {
-		font-family: 'Montserrat';
-		font-style: normal;
-		font-weight: 400;
-		font-display: swap;
-		src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459Wdhyzbi.woff2) format('woff2');
-		unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-	  }
-	  /* latin */
-	  @font-face {
-		font-family: 'Montserrat';
-		font-style: normal;
-		font-weight: 400;
-		font-display: swap;
-		src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459Wlhyw.woff2) format('woff2');
-		unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-	  }
-	  /* cyrillic-ext */
-	  @font-face {
-		font-family: 'Montserrat';
-		font-style: normal;
-		font-weight: 600;
-		font-display: swap;
-		src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459WRhyzbi.woff2) format('woff2');
-		unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
-	  }
-	  /* cyrillic */
-	  @font-face {
-		font-family: 'Montserrat';
-		font-style: normal;
-		font-weight: 600;
-		font-display: swap;
-		src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459W1hyzbi.woff2) format('woff2');
-		unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
-	  }
-	  /* vietnamese */
-	  @font-face {
-		font-family: 'Montserrat';
-		font-style: normal;
-		font-weight: 600;
-		font-display: swap;
-		src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459WZhyzbi.woff2) format('woff2');
-		unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1EA0-1EF9, U+20AB;
-	  }
-	  /* latin-ext */
-	  @font-face {
-		font-family: 'Montserrat';
-		font-style: normal;
-		font-weight: 600;
-		font-display: swap;
-		src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459Wdhyzbi.woff2) format('woff2');
-		unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-	  }
-	  /* latin */
-	  @font-face {
-		font-family: 'Montserrat';
-		font-style: normal;
-		font-weight: 600;
-		font-display: swap;
-		src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459Wlhyw.woff2) format('woff2');
-		unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-	  }
-	  /* cyrillic-ext */
-	  @font-face {
-		font-family: 'Montserrat';
-		font-style: normal;
-		font-weight: 700;
-		font-display: swap;
-		src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459WRhyzbi.woff2) format('woff2');
-		unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
-	  }
-	  /* cyrillic */
-	  @font-face {
-		font-family: 'Montserrat';
-		font-style: normal;
-		font-weight: 700;
-		font-display: swap;
-		src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459W1hyzbi.woff2) format('woff2');
-		unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
-	  }
-	  /* vietnamese */
-	  @font-face {
-		font-family: 'Montserrat';
-		font-style: normal;
-		font-weight: 700;
-		font-display: swap;
-		src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459WZhyzbi.woff2) format('woff2');
-		unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1EA0-1EF9, U+20AB;
-	  }
-	  /* latin-ext */
-	  @font-face {
-		font-family: 'Montserrat';
-		font-style: normal;
-		font-weight: 700;
-		font-display: swap;
-		src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459Wdhyzbi.woff2) format('woff2');
-		unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-	  }
-	  /* latin */
-	  @font-face {
-		font-family: 'Montserrat';
-		font-style: normal;
-		font-weight: 700;
-		font-display: swap;
-		src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459Wlhyw.woff2) format('woff2');
-		unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-	  }
-	
-	  @font-face {
-	  	font-family: 'BurbankBig';
-		font-style: Bold;
-		font-weight: 700;
-		src: url(/fonts/Burbank-Big-Regular-Bold.ttf) format('ttf');
-	
-		}
-}	
+/****************/
+/*    M A I N	*/
+/****************/
 
 /****************/
 /* HEADER EN NAV */
 /****************/
 
 header {
-	background-color: black;
-	padding:.4em;
+  background-color: black;
+  padding: 0.4em;
 }
 
-header  nav {
-	display: flex;
-	justify-content: space-between;
-	/* align-items: center;  maakt de div vreemd?*/ 
+body header section {
+  display: flex;
+  justify-content: space-between;
 }
 
-header nav ul li a {
-	text-decoration: none;
-	font-family: 'Montserrat';
-	font-weight: 700;
-	color:#000;
-
-
-	background-color:#fff;
-	border-radius: 1em;
-	padding: 1em;
-	align-items: center;
-	display: flex;
-	justify-content: space-between;
-
+/*nav link lijst*/
+header nav ul:first-of-type {
+  text-decoration: none;
 }
 
-header nav ul:first-of-type a {
-	background: var(--gradient-text);	
-	background-clip: text;
-	-webkit-text-fill-color: transparent;
-	/* source: https://cssgradient.io/blog/css-gradient-text/ */
+/* nav linkjes zelf*/
+header nav ul:first-of-type li {
+  background-color: var(--color-white);
 }
 
-/* nav blokje*/ 
-header section button {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-evenly;
-	gap: 1em;
+/* tweede lijst met alleen link icoontjes: */
 
+header nav ul:nth-of-type(2) {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+
+  background-color: red;
 }
+/* per knop */
 
-header section button span {
-	background-color:#fff;
-	width: 3em;
-	height: 5px;
-	border-radius: 1em;
+header nav ul:nth-of-type(2) li {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 
+  background: var(--gradient-socials-navbuttons);
+
+  display: block;
+  border-radius: 9999px;
+  padding: 0.625rem;
+  /*credits voor de center: neopets site zelf*/
 }
-
 
 /*****************/
 /* KOPJES       */
 /***************/
 
 h2 {
-	font-family: 'BurbankBig';
-	font-weight: 700;
-	font-style: Bold;
+  font-family: "BurbankBig";
+  font-weight: 700;
+  font-style: Bold;
 }
-
-/* werkt niet?*/
 
 /*************************/
 /* SECTION 1 CARROUSEL  */
 /***********************/
 
-main section:first-of-type ul {
-	margin: 0;
-}
-
 main section:first-of-type ul li {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
-	display:flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-
-	background-image: url(/images/bg-01-mobile.png);
-	background-repeat: no-repeat
-	background-size: cover;
-	/* credit: https://w3schools.com/cssref/pr_background-image.php */
-	font-family: 'Montserrat';
+  background-image: url(/images/bg-01-mobile.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* credit: https://w3schools.com/cssref/pr_background-image.php */
+  font-family: "Montserrat";
 }
 
 main section:first-of-type h2 {
-	-webkit-text-stroke: 2px var(--color-white);
-	/* credit font border https://stackoverflow.com/questions/2570972/css-font-border */
-	font-size:50px;
+  -webkit-text-stroke: 2px var(--color-white);
+  /* credit font border https://stackoverflow.com/questions/2570972/css-font-border */
+  font-size: 50px;
 
-
-	background: var(--color-text-gradient-yellow);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-	/* source: https://cssgradient.io/blog/css-gradient-text/ */
-	text-shadow: var(--color-drop-shadow-h2) 2px 2px;
+  background: var(--color-text-gradient-yellow);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  /* source: https://cssgradient.io/blog/css-gradient-text/ */
+  filter: drop-shadow(0 4px 0 var(--color-drop-shadow-h2));
+  -webkit-text-stroke: 2px var(--color-white);
+  /* credit font border https://stackoverflow.com/questions/2570972/css-font-border */
 }
 
 main section:first-of-type p {
-	font-size: 18px;
-	line-height: 24px;
-	font-weight: 600;
-	color: var(--color-white);	
-	text-shadow: 2px 2px 10px, #0000007a;
-	margin-bottom: 1.25rem;
-	text-align: center;
+  font-family: "Montserrat", Tahoma, Verdana, sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 600;
+  color: var(--color-white);
+  text-shadow: 2px 2px 10px, #0000007a;
+  margin-bottom: 1.25rem;
+  text-align: center;
+}
 
+main section:first-of-type img {
+  width: 96%;
 }
 
 /*******************/
 /* Oranje Buttons */
 /*****************/
 main section:first-of-type ul li a {
-	background-image: var(--gradient-orange-button);
-	color: var(--color-white);	
-	text-decoration: none;
-	font-weight: 600;
-	font-size: 18px;
-	line-height: 18px;
-	text-transform: capitalize;
-	text-align: center;
+  background-image: var(--gradient-orange-button);
+  color: var(--color-white);
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 18px;
+  text-transform: capitalize;
+  text-align: center;
 
-
-	padding: 1rem 2.5rem;
-	border-color: var(--color-white);
-	border-width: 3px;
-	border-style: solid;
-	border-radius: 999px;
+  padding: 1rem 2.5rem;
+  border-color: var(--color-white);
+  border-width: 3px;
+  border-style: solid;
+  border-radius: 999px;
 }
 
 main section:first-of-type ul li a:hover {
-	background-image: var(--gradient-button-hover);
+  background-image: var(--gradient-button-hover);
 }
