--- a/styles/style.css
+++ b/styles/style.css
@@ -211,7 +211,9 @@ p {
     #ff8100 100%
   );
   --color-drop-shadow-h2: #2669a4;
-  --gradient-text: linear-gradient(0.25turn, #8235e9, #632fac);
+  --color-drop-shadow-p-carrousel: #15436cc9;
+
+  --gradient-text-nav: linear-gradient(0.25turn, ##8335eb 0%, #4b2b7e 100%);
   --gradient-orange-button: linear-gradient(360deg, #ff7c00 0%, #ffca00 100%);
   --gradient-button-hover: linear-gradient(180deg, #8235e9 0%, #4b2b7f 100%);
   --gradient-socials-navbuttons: linear-gradient(0.25turn, #414141, #060606);
@@ -221,18 +223,28 @@ p {
 /*    M A I N	*/
 /****************/
 
+/* haalt de mysterieuze padding weg die bij de UL zat*/
+ul {
+  margin: 0;
+  padding: 0;
+}
+
 /****************/
 /* HEADER EN NAV */
 /****************/
 
 header {
-  background-color: black;
+  background-color: var(--color-black);
   padding: 0.4em;
+  padding-left: 1.125rem;
+  padding-right: 1.125rem;
 }
 
 body header section {
   display: flex;
   justify-content: space-between;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
 /*nav link lijst*/
@@ -241,11 +253,33 @@ header nav ul:first-of-type {
 }
 
 /* nav linkjes zelf*/
+/* zorgt voor styling van het witte deel*/
 header nav ul:first-of-type li {
   background-color: var(--color-white);
+  padding: 1em;
+  width: 100%;
+  border-radius: 9999px;
+  margin-bottom: 1.25rem;
 }
 
-/* tweede lijst met alleen link icoontjes: */
+/*de tekst in het linkje*/
+header nav ul:first-of-type li a {
+  text-decoration: none;
+  font-family: "Montserrat";
+  font-weight: 700;
+  font-size: 18;
+}
+
+/* alleen de gradient linkjes*/
+header nav ul:first-of-type li a p:nth-of-type(-n + 4) {
+  /* source/credit voor de selector: https://stackoverflow.com/questions/18672625/how-to-select-first-2-li-elements-using-css#:~:text=The%20syntax%20for%20selecting%20the,the%20first%202%20li%20elements.*/
+  background: var(--gradient-text-nav);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  /* source: https://cssgradient.io/blog/css-gradient-text/ */
+}
+
+/* tweede lijst met alleen link socials icoontjes: */
 
 header nav ul:nth-of-type(2) {
   display: flex;
@@ -254,9 +288,10 @@ header nav ul:nth-of-type(2) {
 
   background-color: red;
 }
+
 /* per knop */
 
-header nav ul:nth-of-type(2) li {
+header nav ul:nth-of-type(2) li a {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -264,9 +299,14 @@ header nav ul:nth-of-type(2) li {
   background: var(--gradient-socials-navbuttons);
 
   display: block;
+  margin: auto;
   border-radius: 9999px;
   padding: 0.625rem;
-  /*credits voor de center: neopets site zelf*/
+}
+
+header nav h2 {
+  text-align: center;
+  color: var(--color-white);
 }
 
 /*****************/
@@ -276,7 +316,7 @@ header nav ul:nth-of-type(2) li {
 h2 {
   font-family: "BurbankBig";
   font-weight: 700;
-  font-style: Bold;
+  text-align: center;
 }
 
 /*************************/
@@ -288,26 +328,67 @@ main section:first-of-type ul li {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-family: "Montserrat";
+}
 
+/* achtergronden centered en geen overflow */
+main section:first-of-type img {
+  display: block;
+  vertical-align: middle;
+  margin-left: auto;
+  margin-right: auto;
+
+  overflow-clip-margin: content-box;
+  overflow: clip;
+  /* overflow clip = zodat de image niet horizontaal buiten de vieport gaat */
+}
+
+/*************************************/
+/* achtergronden per carroussel item*/
+/***********************************/
+main section:first-of-type ul li:first-of-type {
   background-image: url(/images/bg-01-mobile.png);
   background-repeat: no-repeat;
   background-size: cover;
   /* credit: https://w3schools.com/cssref/pr_background-image.php */
-  font-family: "Montserrat";
+}
+main section:first-of-type ul li:nth-of-type(2) {
+  background-image: url(/images/bg-02-mobile.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* credit: https://w3schools.com/cssref/pr_background-image.php */
+}
+main section:first-of-type ul li:nth-of-type(3) {
+  background-image: url(/images/bg-04-mobile.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* credit: https://w3schools.com/cssref/pr_background-image.php */
+}
+main section:first-of-type ul li:nth-of-type(4) {
+  background-image: url(/images/bg-03-mobile.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* credit: https://w3schools.com/cssref/pr_background-image.php */
+}
+main section:first-of-type ul li:nth-of-type(5) {
+  background-image: url(/images/bg-05-mobile.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* credit: https://w3schools.com/cssref/pr_background-image.php */
 }
 
-main section:first-of-type h2 {
+/********************************/
+/*de grote 1e h2 in de carrousel*/
+/*******************************/
+main section:first-of-type li:first-of-type h2 {
   -webkit-text-stroke: 2px var(--color-white);
-  /* credit font border https://stackoverflow.com/questions/2570972/css-font-border */
+  /* source/credit font border https://stackoverflow.com/questions/2570972/css-font-border */
   font-size: 50px;
-
   background: var(--color-text-gradient-yellow);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  /* source: https://cssgradient.io/blog/css-gradient-text/ */
+  /* source/credit: https://cssgradient.io/blog/css-gradient-text/ */
   filter: drop-shadow(0 4px 0 var(--color-drop-shadow-h2));
-  -webkit-text-stroke: 2px var(--color-white);
-  /* credit font border https://stackoverflow.com/questions/2570972/css-font-border */
 }
 
 main section:first-of-type p {
@@ -316,9 +397,13 @@ main section:first-of-type p {
   line-height: 24px;
   font-weight: 600;
   color: var(--color-white);
-  text-shadow: 2px 2px 10px, #0000007a;
   margin-bottom: 1.25rem;
   text-align: center;
+}
+
+/* de enige met drop-shadow :) */
+main section:first-of-type li:first-of-type p {
+  text-shadow: var(--color-drop-shadow-p-carrousel) 1px 0 10px;
 }
 
 main section:first-of-type img {
@@ -347,4 +432,41 @@ main section:first-of-type ul li a {
 
 main section:first-of-type ul li a:hover {
   background-image: var(--gradient-button-hover);
+}
+
+/*************************/
+/* SECTION 2 CARROUSEL  */
+/***********************/
+main section:nth-of-type(2) {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+/*carroussel stukje*/
+main section:nth-of-type(2) ul {
+  display: block;
+  justify-content: center;
+  align-items: center;
+  font-family: "Montserrat";
+}
+
+main section:nth-of-type(2) ul img {
+  border-radius: 0.5rem;
+  width: 100%;
+}
+
+/********************/
+/*   GRID SECTION  */
+/*  MET CHARACTERS*/
+/*****************/
+
+main section:nth-of-type(4) ul {
+  background-color: purple;
+  display: grid;
+  row-gap: 1.25rem;
+  padding-right: 1.25rem;
+  column-gap: 1.25rem;
+
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  /* fr = fractie, dit laat ze allemaal dezelfde fractie van de ruimte innemen*/
 }
